--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   ],
   "author": "James Edward Baldonado II",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jamesedwardbaldonadoii/simple-react-multiselect"
+  },
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
